fix scrollbar on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -43,21 +43,24 @@ body {
     }
 }
 
-*::-webkit-scrollbar {
-    width: 10px;
-}
+@media (min-width: 1024px) {
+    *::-webkit-scrollbar {
+        width: 10px;
+    }
 
-*::-webkit-scrollbar-track {
-    background-color: transparent;
-}
+    *::-webkit-scrollbar-track {
+        background-color: transparent;
+    }
 
-*::-webkit-scrollbar-thumb {
-    background-color:#bdbdbc;
-    border-radius: 18px;
-    border: 2px solid #fff;
-    height: 224px;
-}
+    *::-webkit-scrollbar-thumb {
+        background-color:#bdbdbc;
+        border-radius: 18px;
+        border: 2px solid #fff;
+        height: 224px;
+    }
 
-*::-webkit-scrollbar-thumb:hover {
-    background-color:#727473;
+    *::-webkit-scrollbar-thumb:hover {
+        background-color:#727473;
+    }
 }
+  
